# claude-ecosystem-template

./: .ecosystem.toml  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  BUGS.md  CHANGELOG.md  CLAUDE.md  ENVIRONMENT_SETUP.md  LICENSE  README.md  ROADMAP.md  TEMPLATE_README.md  bootstrap.ps1  pyproject.toml  task.md
.agents/: claude-overrides.md
.agents/context/: changelog-rules.md  coding-conventions.md
.agents/rules/: code-quality.md  common.md  git.md  model-policy.md
.claude/: settings.json  settings.local.example.json
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: code-reviewer.md  ecosystem-auditor.md  researcher.md
.claude/commands/: agentic_tdd.md  audit_ecosystem.md  commit_and_release.md  consolidate_lessons.md  (+8 more)
.githooks/: pre-push
.memory/: activeContext.md  api_reference_hooks.md  audit_history.jsonl  audit_v2.1.0_release.md  audit_v2.1.1_release.md  audit_v2.2.0_release.md  audit_v2.2.1_release.md  claude_code_state.md  lessons.md  progress.md  projectbrief.md  retrieval_logs.jsonl  session_trajectories.jsonl  systemPatterns.md  techContext.md
docs/: template-design.md
scripts/: check_activectx_sprint_goals.py  check_hook_health.py  check_task_guardrail.py  check_version_sync.py  clean_workspace.ps1  diag_dashboard.py  finalize_session.py  health_check.py  monitor_context.py  monitor_context.sh  prune_memory.py  reasoning_bank.py  regenerate_plugin_manifest.py  setup_mcp.ps1  sync_agents_md.py  test_pre_push_e2e.py  test_reasoning_bank.py  train_reasoning_bank.py  update_ecosystem.py
(+28 files in other folders)
